--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div>
         </div>
     </div>
-    <div class="json-input ">
+    <div class="json-input active">
         <div class="wrapper">
             <label for="file">
                 <div class="fake-button">Upload</div>
@@ -41,7 +41,7 @@
             <button id="start">Start</button>
         </div>
     </div>
-    <div class="overlay "></div>
+    <div class="overlay active"></div>
     <div class="app">
         <div class="wrapper">
             <div class="title">
