finish choose answer, play sound effect

--- a/index.html
+++ b/index.html
@@ -32,12 +32,15 @@
     </div>
     <div class="json-input active">
         <div class="wrapper">
-            <label for="file">
-                <div class="fake-button">Upload</div>
-                <div class="file-upload-name">Choose Json file</div>
-                <input type="file"name="file" id="file">
-                <!-- <input type="file"name="file" id="file" accept=".json"> -->
-            </label>
+            <div class="options">
+                <button id="remove">Remove</button>
+                <label for="file">
+                    <div class="fake-button">Upload</div>
+                    <div class="file-upload-name">Choose Json file</div>
+                    <input type="file" name="file" id="file">
+                    <!-- <input type="file"name="file" id="file" accept=".json"> -->
+                </label>
+            </div>
             <button id="start">Start</button>
         </div>
     </div>
@@ -61,8 +64,10 @@
                             </div>
                             <div class="question-content">
                                 <p>
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. At unde suscipit autem beatae sunt
-                                    obcaecati eveniet repellat quo ab accusamus. Nemo nihil fugit quod ipsam earum maxime, molestiae
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. At unde suscipit autem
+                                    beatae sunt
+                                    obcaecati eveniet repellat quo ab accusamus. Nemo nihil fugit quod ipsam earum
+                                    maxime, molestiae
                                     laborum est.
                                 </p>
                             </div>
@@ -117,8 +122,10 @@
                             </div>
                             <div class="question-content">
                                 <p>
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. At unde suscipit autem beatae sunt
-                                    obcaecati eveniet repellat quo ab accusamus. Nemo nihil fugit quod ipsam earum maxime, molestiae
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. At unde suscipit autem
+                                    beatae sunt
+                                    obcaecati eveniet repellat quo ab accusamus. Nemo nihil fugit quod ipsam earum
+                                    maxime, molestiae
                                     laborum est.
                                 </p>
                             </div>
