--- a/index.html
+++ b/index.html
@@ -49,129 +49,128 @@
         <div class="wrapper">
             <div class="title">
                 <p class="title-content">
-                    Question
-                    <span>
-                        xyz
-                    </span>
+                    Question <span>xyz</span>
                 </p>
             </div>
             <div class="question-show">
-                <div class="question-list">
-                    <div class="question">
-                        <div class="question-head">
-                            <div class="question-num">
-                                <strong>#<span>1</span></strong>
+                <div class="question-show-wrapper">
+                    <div class="question-list">
+                        <div class="question">
+                            <div class="question-head">
+                                <div class="question-num">
+                                    <strong>#<span>1</span></strong>
+                                </div>
+                                <div class="question-content">
+                                    <p>
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. At unde suscipit autem
+                                        beatae sunt
+                                        obcaecati eveniet repellat quo ab accusamus. Nemo nihil fugit quod ipsam earum
+                                        maxime, molestiae
+                                        laborum est.
+                                    </p>
+                                </div>
                             </div>
-                            <div class="question-content">
-                                <p>
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. At unde suscipit autem
-                                    beatae sunt
-                                    obcaecati eveniet repellat quo ab accusamus. Nemo nihil fugit quod ipsam earum
-                                    maxime, molestiae
-                                    laborum est.
-                                </p>
-                            </div>
+                            <ul class="question-body">
+                                <li class="answer correct">
+                                    <div class="answer-head">
+                                        A
+                                    </div>
+                                    <div class="answer-body">
+                                        <p>
+                                            Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                                        </p>
+                                    </div>
+                                </li>
+                                <li class="answer wrong">
+                                    <div class="answer-head">
+                                        B
+                                    </div>
+                                    <div class="answer-body">
+                                        <p>
+                                            Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                                        </p>
+                                    </div>
+                                </li>
+                                <li class="answer">
+                                    <div class="answer-head">
+                                        C
+                                    </div>
+                                    <div class="answer-body">
+                                        <p>
+                                            Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                                        </p>
+                                    </div>
+                                </li>
+                                <li class="answer">
+                                    <div class="answer-head">
+                                        D
+                                    </div>
+                                    <div class="answer-body">
+                                        <p>
+                                            Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                                        </p>
+                                    </div>
+                                </li>
+                            </ul>
                         </div>
-                        <ul class="question-body">
-                            <li class="answer correct">
-                                <div class="answer-head">
-                                    A
+                        <div class="question">
+                            <div class="question-head">
+                                <div class="question-num">
+                                    <strong>#<span>1</span></strong>
                                 </div>
-                                <div class="answer-body">
+                                <div class="question-content">
                                     <p>
-                                        Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. At unde suscipit autem
+                                        beatae sunt
+                                        obcaecati eveniet repellat quo ab accusamus. Nemo nihil fugit quod ipsam earum
+                                        maxime, molestiae
+                                        laborum est.
                                     </p>
                                 </div>
-                            </li>
-                            <li class="answer wrong">
-                                <div class="answer-head">
-                                    B
-                                </div>
-                                <div class="answer-body">
-                                    <p>
-                                        Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                                    </p>
-                                </div>
-                            </li>
-                            <li class="answer">
-                                <div class="answer-head">
-                                    C
-                                </div>
-                                <div class="answer-body">
-                                    <p>
-                                        Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                                    </p>
-                                </div>
-                            </li>
-                            <li class="answer">
-                                <div class="answer-head">
-                                    D
-                                </div>
-                                <div class="answer-body">
-                                    <p>
-                                        Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                                    </p>
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="question">
-                        <div class="question-head">
-                            <div class="question-num">
-                                <strong>#<span>1</span></strong>
                             </div>
-                            <div class="question-content">
-                                <p>
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. At unde suscipit autem
-                                    beatae sunt
-                                    obcaecati eveniet repellat quo ab accusamus. Nemo nihil fugit quod ipsam earum
-                                    maxime, molestiae
-                                    laborum est.
-                                </p>
-                            </div>
+                            <ul class="question-body">
+                                <li class="answer">
+                                    <div class="answer-head">
+                                        A
+                                    </div>
+                                    <div class="answer-body">
+                                        <p>
+                                            Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                                        </p>
+                                    </div>
+                                </li>
+                                <li class="answer">
+                                    <div class="answer-head">
+                                        B
+                                    </div>
+                                    <div class="answer-body">
+                                        <p>
+                                            Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                                        </p>
+                                    </div>
+                                </li>
+                                <li class="answer">
+                                    <div class="answer-head">
+                                        C
+                                    </div>
+                                    <div class="answer-body">
+                                        <p>
+                                            Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                                        </p>
+                                    </div>
+                                </li>
+                                <li class="answer">
+                                    <div class="answer-head">
+                                        D
+                                    </div>
+                                    <div class="answer-body">
+                                        <p>
+                                            Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                                        </p>
+                                    </div>
+                                </li>
+                            </ul>
                         </div>
-                        <ul class="question-body">
-                            <li class="answer">
-                                <div class="answer-head">
-                                    A
-                                </div>
-                                <div class="answer-body">
-                                    <p>
-                                        Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                                    </p>
-                                </div>
-                            </li>
-                            <li class="answer">
-                                <div class="answer-head">
-                                    B
-                                </div>
-                                <div class="answer-body">
-                                    <p>
-                                        Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                                    </p>
-                                </div>
-                            </li>
-                            <li class="answer">
-                                <div class="answer-head">
-                                    C
-                                </div>
-                                <div class="answer-body">
-                                    <p>
-                                        Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                                    </p>
-                                </div>
-                            </li>
-                            <li class="answer">
-                                <div class="answer-head">
-                                    D
-                                </div>
-                                <div class="answer-body">
-                                    <p>
-                                        Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                                    </p>
-                                </div>
-                            </li>
-                        </ul>
                     </div>
                 </div>
             </div>
