--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div>
         </div>
     </div>
-    <div class="json-input ">
+    <div class="json-input active">
         <div class="wrapper">
             <div class="options">
                 <button id="remove">Remove</button>
@@ -44,7 +44,7 @@
             <button id="start">Start</button>
         </div>
     </div>
-    <div class="overlay "></div>
+    <div class="overlay active"></div>
     <div class="app">
         <div class="wrapper">
             <div class="title">
@@ -60,7 +60,14 @@
                     </strong>
                 </p>
                 <p class="count-correct-answer">
-                    <span>10</span><span>10</span>
+                    <i class="fa-solid fa-square-check"></i>
+                    <strong>
+                        <span>0</span>
+                    </strong>
+                    <i class="fa-solid fa-square-xmark"></i>
+                    <strong>
+                        <span>0</span>
+                    </strong>
                 </p>
             </div>
             <div class="question-show">
