--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
             </div>
             <button id="start">Start</button>
         </div>
+        <div class="wait">
+            <img src="./img/wait.gif" alt="wait">
+        </div>
     </div>
     <div class="overlay active"></div>
     <div class="app">
